if (${CMAKE_VERSION} VERSION_GREATER "3.13")
	CMAKE_POLICY(SET CMP0078 OLD)
	CMAKE_POLICY(SET CMP0086 OLD)
endif()

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CMAKE_SWIG_FLAGS "")

SWIG_ADD_LIBRARY(apbslib
		TYPE SHARED
		LANGUAGE python
		SOURCES apbslib.i)

# Another hack to get SWIG to use the the correct library extension!
#SET_TARGET_PROPERTIES(${SWIG_MODULE_apbslib_REAL_NAME} PROPERTIES SUFFIX ${CMAKE_SHARED_LIBRARY_SUFFIX})

SWIG_LINK_LIBRARIES(apbslib PRIVATE ${APBS_LIBS} ${APBS_INTERNAL_LIBS})

add_custom_command(
  TARGET _apbslib
  POST_BUILD
  COMMAND ${CMAKE_COMMAND} -E copy 
    ${CMAKE_CURRENT_BINARY_DIR}/apbslib.py 
    "${CMAKE_BINARY_DIR}/lib/apbslib.py"
  COMMAND ${CMAKE_COMMAND} -E copy 
    ${CMAKE_CURRENT_BINARY_DIR}/apbslib.py
    ${PROJECT_SOURCE_DIR}/apbs/bindings/apbslib.py
  COMMAND ${CMAKE_COMMAND} -E copy
    $<TARGET_FILE:_apbslib>
    ${PROJECT_SOURCE_DIR}/apbs/bindings/$<TARGET_FILE_NAME:_apbslib>
  )
